--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,28 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100%;
+}
+td {
+  padding: 5px;
+}
+#root {
+  padding: 100px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  -ms-align-items: center;
+  align-items: center;
+  margin: 0 auto;
+}
+form > * {
+  display: block;
+  margin: 10px auto;
+}
+form {
+  text-align: center;
+}
+.category {
+  padding: 10px 5px;
+  background: #ececec;
 }
